@@ -1,0 +1,15 @@
+
+
+namespace evf{
+ 
+  class FileDescriptorHandler{
+    
+  public:
+    FileDescriptorHandler();
+    
+
+  private:
+    
+    
+  };
+}
